@@ -174,9 +174,9 @@ public class Piloto implements Serializable, PilotoSuave {
     @JsonIgnore
     private boolean processouVoltaBox;
     @JsonIgnore
-    private Double maxGanhoBaixa = new Double(0);
+    private Double maxGanhoBaixa = Double.valueOf(0);
     @JsonIgnore
-    private Double maxGanhoAlta = new Double(0);
+    private Double maxGanhoAlta = Double.valueOf(0);
     @JsonIgnore
     private int contTravouRodas;
     @JsonIgnore
@@ -333,7 +333,6 @@ public class Piloto implements Serializable, PilotoSuave {
     }
 
     public void setNoAtualSuave(No noAtualSuave) {
-        setNoAnterior(getNoAtualSuave());
         this.noAtualSuave = noAtualSuave;
     }
 
@@ -813,9 +812,6 @@ public class Piloto implements Serializable, PilotoSuave {
         if (getNoAtual() != null) {
             atual = getNoAtual().getPoint();
         }
-        if (getNoAtualSuave() != null) {
-            atual = getNoAtualSuave().getPoint();
-        }
         if (atual == null) {
             return true;
         }
@@ -971,21 +967,21 @@ public class Piloto implements Serializable, PilotoSuave {
     private void processaUltimosDesgastesPneuECombustivel() {
         int pCombust = getCarro().getPorcentagemCombustivel();
         if (ultimoConsumoCombust == null) {
-            ultimoConsumoCombust = new Integer(pCombust);
+            ultimoConsumoCombust = Integer.valueOf(pCombust);
         } else {
             if (ultimoConsumoCombust.intValue() > pCombust) {
                 ultsConsumosCombustivel.add(Integer.valueOf(ultimoConsumoCombust.intValue() - pCombust));
-                ultimoConsumoCombust = new Integer(pCombust);
+                ultimoConsumoCombust = Integer.valueOf(pCombust);
 
             }
         }
         int pPneu = getCarro().getPorcentagemDesgastePneus();
         if (ultimoConsumoPneu == null) {
-            ultimoConsumoPneu = new Integer(pPneu);
+            ultimoConsumoPneu = Integer.valueOf(pPneu);
         } else {
             if (ultimoConsumoPneu.intValue() > pPneu) {
                 ultsConsumosPneu.add(Integer.valueOf(ultimoConsumoCombust.intValue() - pPneu));
-                ultimoConsumoPneu = new Integer(pPneu);
+                ultimoConsumoPneu = Integer.valueOf(pPneu);
             }
         }
     }
@@ -1319,8 +1315,9 @@ public class Piloto implements Serializable, PilotoSuave {
             pilotoFrente.centralizaCarroColisao();
             colisaoDiantera = getDiateiraColisao().intersects(pilotoFrente.getTrazeiraColisao()) || getDiateiraColisao().intersects(pilotoFrente.getCentroColisao());
             colisaoCentro = getCentroColisao().intersects(pilotoFrente.getTrazeiraColisao());
-            colisao = (colisaoDiantera || colisaoCentro) ? pilotoFrente : null;
+            Piloto colisao = (colisaoDiantera || colisaoCentro) ? pilotoFrente : null;
             if (colisao != null) {
+                setColisao(colisao);
                 return;
             }
         }
@@ -1469,15 +1466,15 @@ public class Piloto implements Serializable, PilotoSuave {
         double diff = calculaDiferencaParaProximo;
         double multiplicadoGanhoTurbulencia = (controleJogo.getFatorUtrapassagem());
         if (controleJogo.getNumVoltaAtual() <= 0) {
-            multiplicadoGanhoTurbulencia = 1;
+            multiplicadoGanhoTurbulencia = 0.7;
         }
         double distLimiteTurbulencia = 100.0 / multiplicadoGanhoTurbulencia;
         if (diff < distLimiteTurbulencia && !verificaForaPista(carroPilotoDaFrenteRetardatario.getPiloto())) {
             if (getTracado() != carroPilotoDaFrenteRetardatario.getPiloto().getTracado()) {
                 if (getNoAtual().verificaRetaOuLargada()) {
-                    multiplicadoGanhoTurbulencia += (getCarro().testePotencia() && getCarro().testeAerodinamica()) ? 0.2 : 0.0;
+                    multiplicadoGanhoTurbulencia += (getCarro().testePotencia() && getCarro().testeAerodinamica()) ? 0.3 : 0.1;
                 } else {
-                    multiplicadoGanhoTurbulencia += (testeHabilidadePilotoAerodinamicaFreios() ? 0.1 : 0.0);
+                    multiplicadoGanhoTurbulencia += (testeHabilidadePilotoAerodinamicaFreios() ? 0.2 : 0.1);
                 }
             }
             if (multiplicadoGanhoTurbulencia > 1) {
@@ -1569,6 +1566,14 @@ public class Piloto implements Serializable, PilotoSuave {
             ganho = 0;
         }
         if (verificaForaPista(this)) {
+            return;
+        }
+        if (isColisaoCentro()) {
+            ganho *= 0.5;
+            return;
+        }
+        if (isColisaoDiantera()) {
+            ganho *= 0.7;
             return;
         }
         if (evitaBaterCarroFrente) {
@@ -1926,7 +1931,7 @@ public class Piloto implements Serializable, PilotoSuave {
         if (piloto.getPtosBox() > 0) {
             return;
         }
-        limiteEvitarBatrCarroFrente = 150;
+        limiteEvitarBatrCarroFrente = 100;
         if (getCarro().getDurabilidadeAereofolio() < (Global.DURABILIDADE_AREOFOLIO / 2)) {
             limiteEvitarBatrCarroFrente += 100;
         }
@@ -1936,7 +1941,7 @@ public class Piloto implements Serializable, PilotoSuave {
         if (piloto.getColisao() != null && piloto.getTracado() == getTracado()) {
             limiteEvitarBatrCarroFrente += 100;
         }
-        if (calculaDiffParaProximoRetardatarioMesmoTracado < limiteEvitarBatrCarroFrente) {
+        if (calculaDiffParaProximoRetardatarioMesmoTracado < limiteEvitarBatrCarroFrente && piloto.getTracado() == getTracado()) {
             evitaBaterCarroFrente = true;
         }
     }
